fixed resume alignment

--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,7 @@ and (min-width : 1224px) {
 	}
 	.resume{
 		height: 550px;
-		width:100%;
+		width:110%;
 	}
 	.pfimg {
 	    height: 100%;
